# ColBERT

./: .gitignore  pyproject.toml  server.py
src/colbert/: index_updater.py  searcher.py
src/colbert/infra/: provenance.py
tests/: test_server.py
